yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookcatalog-service
  namespace: bookcatalog
spec:
  selector:
    app: bookcatalog-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
